objects/System_Log_Event__e.object
<CustomObject>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_ID__c</fullName>
        <label>Log ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>System Log Event</label>
    <pluralLabel>System Log Events</pluralLabel>
</CustomObject>